# midi_degradation_toolkit

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  gen_acme_dataset.py  make_dataset.py  measure_errors.py  measure_errors_example.ipynb  pyproject.toml  setup.cfg  setup.py
baselines/: README.md  eval_script.py  eval_task.py  experiment.txt  get_results.py  rule_based.py  train_task.py
docs/: 01_the_ACME_dataset.ipynb  02_dataset_creation.ipynb  02_the_ACME_dataset.ipynb  04_data_parsers_and_degrader.ipynb  05_AMT_error_matching.ipynb  06_training_and_evalutation.ipynb  README.md  utils.py
img/: logo.txt  mdtk-ismir
mdtk/: README.md  __init__.py  data_structures.py  degradations.py  degrader.py  df_utils.py  downloaders.py  downloads.py  eval.py  fileio.py  filesystem_utils.py  formatters.py  midi.py  pytorch_datasets.py  pytorch_models.py  pytorch_trainers.py
mdtk/tests/: test.mid  test_data_structures.py  test_degradations.py  test_df_utils.py  test_downloaders.py  test_fileio.py  test_midi.py
slurm/: README.md  gen_task1_expt.py  gen_task1weighted_expt.py  gen_task2_expt.py  gen_task2b_expt.py  gen_task3_expt.py  gen_task3weighted_expt.py  gen_task4_expt.py  rsync_data.sh  run_experiment.sh  slurm_arrayjob.sh
tests/: test_data_structures.py
