[metadata]
name = mdtk
version = 2019.06rc1
licence = MIT
url = https://github.com/JamesOwers/midi_degradation_toolkit
author = James Owers
author_email = james.f.owers@gmail.com
keywords = MIDI ACME melody music dataset
description = A toolkit for making Altered and Corrupted MIDI Excerpts (ACME datasets)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
# please keep package list sorted
# TODO: move matplotlib, mir_eval etc. into an eval option
install_requires =
    matplotlib
    mir_eval
    numpy
    pandas
    pretty_midi
    seaborn
    torch
    tqdm
python_requires =
    ~=3.7
packages = find:
dependency_links =
    https://github.com/craffel/pretty-midi/tarball/master#egg=0.2.8'

[options.extras_require]
# please keep package lists sorted
dev =
    %(docs)s
    black
    flake8
    isort
    ipykernel
    jupyter_contrib_nbextensions
    mypy
    nodejs
    pre-commit
    pylint
    pytest
docs =
    jupyterlab

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests

[easy_install]
index_url = https://pypi.org/simple/

[flake8]
max-line-length = 88
