[metadata]
name = mdtk
version = 2020.10rc1
licence = MIT
url = https://github.com/JamesOwers/midi_degradation_toolkit
author = James Owers
author_email = james.f.owers@gmail.com
keywords = MIDI ACME melody music dataset
description = A toolkit for making Altered and Corrupted MIDI Excerpts (ACME datasets)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
# please keep package list sorted
# TODO: move torch out when datasets made non torch dependent
install_requires =
    numpy
    pandas
    pretty_midi
    torch
    tqdm
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
python_requires =
    ~=3.6
packages = find:

[options.extras_require]
# please keep package lists sorted
dev =
    %(docs)s
    %(eval)s
    black
    flake8
    isort
    ipykernel
    jupyter_contrib_nbextensions
    mypy
    nodejs
    pre-commit
    pylint
    pytest
    pytest-cov
docs =
    jupyterlab
    matplotlib
    seaborn
eval =
    matplotlib
    mir_eval
    seaborn


[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = mdtk/tests
addopts = --cov

[easy_install]
index_url = https://pypi.org/simple/

[flake8]
max-line-length = 88
ignore = E203,W503
